@@ -1,9 +1,10 @@
 *** nearest release ***
   ! store (session file) current session and effect collection file path
   ! Make simple effects
-    * histogram operations
     * multiple effects convertion: save few images from just one, for example diffrent color effects
   ! compare painting color filter effect performance (multiply per pixel vs. QPainter.fill(QColor))
+  ! clear file list before session restoring
+  ! fix crash while loading image modified by SIR
 
 *** next release ***
   ! load all files selected in file menager (ie. Thunar) in just 1 instance of SIR
@@ -11,6 +12,9 @@
   ! support for animated graphics files (QMovie?)
   ! defines.h refactorization: change defines to enumerations
   ! search refactorizationable code
+
+*** 3.0 roadmap ***
+  ! dynamically add effects to effect list (empty initially)
 
 *** wishlist ***
   ! SelectionDialog:
