@@ -19,14 +19,14 @@
   <widget class="QWidget" name="scrollAreaWidgetContents">
    <property name="geometry">
     <rect>
-     <x>-26</x>
+     <x>0</x>
      <y>0</y>
-     <width>680</width>
-     <height>621</height>
+     <width>697</width>
+     <height>689</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout_2">
-    <item row="3" column="0">
+    <item row="4" column="0">
      <widget class="QGroupBox" name="imageGroupBox">
       <property name="title">
        <string>Add Image</string>
@@ -124,7 +124,7 @@
       </layout>
      </widget>
     </item>
-    <item row="4" column="0">
+    <item row="5" column="0">
      <spacer name="verticalSpacer">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -137,7 +137,7 @@
       </property>
      </spacer>
     </item>
-    <item row="2" column="0">
+    <item row="3" column="0">
      <widget class="QGroupBox" name="textGroupBox">
       <property name="title">
        <string>Add Text</string>
@@ -425,7 +425,7 @@
       </layout>
      </widget>
     </item>
-    <item row="1" column="0">
+    <item row="2" column="0">
      <widget class="QGroupBox" name="frameGroupBox">
       <property name="title">
        <string>Add Frame</string>
@@ -580,7 +580,7 @@
       </layout>
      </widget>
     </item>
-    <item row="0" column="0">
+    <item row="1" column="0">
      <widget class="QGroupBox" name="filterGroupBox">
       <property name="title">
        <string>Filter</string>
@@ -642,6 +642,35 @@
          </property>
          <property name="checked">
           <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item row="0" column="0">
+     <widget class="QGroupBox" name="histogramGroupBox">
+      <property name="title">
+       <string>Histogram</string>
+      </property>
+      <property name="checkable">
+       <bool>true</bool>
+      </property>
+      <property name="checked">
+       <bool>false</bool>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout_4">
+       <item>
+        <widget class="QRadioButton" name="stretchHistogramRadioButton">
+         <property name="text">
+          <string>Stretch Histogram</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QRadioButton" name="equalizeHistogramRadioButton">
+         <property name="text">
+          <string>Equalize Histogram</string>
          </property>
         </widget>
        </item>
