@@ -763,9 +763,14 @@ QImage * ConvertThread::loadSvgImage() {
     return img;
 }
 
+/** Draws effects into new image.
+  * \return New image object.
+  */
 QImage ConvertThread::paintEffects(QImage *image) {
     QImage destImg(*image);
     ConvertEffects effectPainter(&destImg, shared);
+    if (shared->histogramOperation > 0)
+
     if (shared->filterType != NoFilter)
         effectPainter.filtrate();
     if (shared->frameWidth > 0 && shared->frameColor.isValid()) {
